tenzir/integration/data/reference/functions/test_slice/step_08.ref
error: `step` must be greater 0, but got -1
 --> <input>:5:33
  |
5 |     x = x.slice(0, stop=6, step=-1)
  |                                 ^^ 
  |